# Data-Science-Final-Project

./: .env.example  .gitignore  .gitmodules  DATA_HANDOFF.md  README.md  TA 125 Historical Data.csv  Tel Aviv Volatility Index VTA35 Historical Data.csv  WEEKLY_SUMMARY_2026-06-22.md  analyticom.drawio  compare_lstm_features_with_poc-Copy1.ipynb  compare_lstm_features_with_poc.ipynb  docker-compose.yml  eda.ipynb  idea1.md  idea2.md  ideas.md  leaderboard.md  lstm_forecaster.ipynb  miro_explainability.ipynb  mivazakim_scraper_poc.py  poc.ipynb  pyproject.toml  sentisense_analysis.ipynb  timesfm_explainability.ipynb  transformer_forecaster.ipynb  tuning.ipynb  הצעה - מערכת לזיהוי סרטן ריאות.docx  הצעה - מערכת לזיהוי שברים.docx  הצעת פרוייקט טלומרים.docx
.claude/: CLAUDE.md  ROADMAP.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docs/: LIVE_INVENTORY.md  LIVE_RUNBOOK.md  MODEL_ZOO.md  RUNBOOK.md  VECTORDB.md  sentisense-understanding.md
docs/miro/: LOCAL_ONLY.md  PLAN.md  SOURCE_AS_AGENTS.md  UI_GRAPH_CONTRACT.md
docs/superpowers/specs/: 2026-07-02-dashboard-v2-design.md
evaluation/: README.md  __init__.py  evaluate.py  golden_dataset.csv  install_llms.sh  metrics.py  report.py
mivzakim_scraper/: README.md  main.py  mivzakim_scraper.py  mivzakim_search_scraper.py  pyproject.toml  requirements.txt  scrape.py
mivzakim_scraper_poc/: main.py  mivazakim_scraper.py  mivzakim_search_scraper.py  requirements.txt  scrape.py  utils.py
mivzakim_scraper_poc/.claude/: settings.local.json
mivzakim_scraper_poc/cookies/: scraper_2025-12-14-cookies.json
mivzakim_scraper_poc/sessions/: scraper_2025-12-14.json
ops/: crontab.txt  pm2.config.js
processing_engine/: README.md  __init__.py  __main__.py  agents.py  config.py  engine.py  fast_pipeline.py  graph.py  models.py  nodes.py  prompts.py  pyproject.toml  tools.py
processing_engine/evaluation/: README.md  __init__.py  evaluate.py  golden_dataset.csv  metrics.py  report.py
scripts/: backfill_history.py  build_embedding_derived.py  challenger_hpo.py  compute_full_eval.py  container_startup.sh  daily_live.py  daily_scrape_to_db.py  deploy_vectordb.py  full_compare.py  gap_fill.py  horizon_sweep.py  init_db.sql  init_pipeline.sh  init_zep.sh  migrate_csv_to_db.py  migrate_db.py  miro_daily.py  mirofish.env.local-only.example  patch_mirofish_zep_local.py  pipeline_compare.py  process_headlines.py  retry_failed_headlines.py  run_miro_window.py  settle_predictions.py  standardize_to_latest_model.py  train_registry.py  update_data_csv.py  verify_local_egress.sh
self_ranking_platform/: ACTIVATE.md  README.md  ranking_script.py  requirements.txt
sentisense/: __init__.py  config.py  constants.py  eta.py  pipeline.py
sentisense/cluster/: __init__.py  narrative.py
sentisense/db/: __init__.py  connection.py
sentisense/db/migrations/: 001_headline_embeddings.sql  002_narrative_sim.sql  003_narrative_sim_mode.sql  004_embedding_derived.sql  005_model_registry.sql  006_champion_full_eval.sql  007_embedding_basis.sql
sentisense/embed/: __init__.py  derived.py  embeddings.py
sentisense/features/: __init__.py  dataset.py
sentisense/hpo/: __init__.py  optuna_lstm.py  optuna_seq.py
sentisense/ingest/: __init__.py  backfill.py  coverage_report.py  score.py
sentisense/models/: __init__.py  backtest.py  baselines.py  chronos_forecaster.py  lstm.py  metrics.py  seq_zoo.py  sequence.py  tft_forecaster.py  timesfm_forecaster.py  train.py  xgb_hpo.py
sentisense/serve/: __init__.py  champion.py  registry.py
sentisense/sim/: __init__.py  config.py  extract.py  graph.py  graph_api.py  miro_client.py  preflight.py  runner.py
tests/: test_confusion_matrix.py  test_daily_live.py  test_dashboard_v2.py  test_embedding_basis.py  test_embedding_derived.py  test_eta.py  test_features.py  test_horizon.py  test_leaderboard_stats.py  test_model_zoo.py  test_overnight_features.py  test_phase0_phase1.py  test_postcutoff_overlay.py  test_promotion_gate.py  test_registry_serve.py  test_sim_extract.py  test_sim_features.py  test_sim_preflight.py  test_sim_runner.py  test_streaming_centroid.py  test_timesfm_mapping.py  test_train_registry_metrics.py  test_vectordb.py
ui/: __init__.py  app.py  queries.py
ui/frontend/: index.html  package-lock.json  package.json  vite.config.js
ui/frontend/src/: App.jsx  styles.css
ui/frontend/src/components/: Archive.jsx  Centroids3D.jsx  CytoscapeGraph.jsx  Dashboard.jsx  EdaPanels.jsx  FullConfusion.jsx  HeadlineList.jsx  Hero.jsx  Models.jsx  PersonaPanel.jsx  Simulator.jsx
ui/frontend/src/lib/: api.js  cytoscapeConfig.js  format.js  plotly.js
