[project]
name = "mivzakim-scraper"
version = "0.1.0"
description = "Mivzakim news headlines scraper with keyword search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas~=2.3.3",
    "lxml~=4.9.3",
    "playwright~=1.57.0",
    "beautifulsoup4~=4.12.3",
    "requests~=2.31.0",
]
