[project]
name = "processing-engine"
version = "0.2.0"
description = "SentiSense Multi-Agent AI Processing Engine — LangGraph ReAct agents for Hebrew news sentiment and relevancy scoring via local Ollama inference."
requires-python = ">=3.12"
dependencies = [
    # --- LLM Orchestration ---
    "langchain>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-prebuilt>=1.0.0",
    # --- Data Validation ---
    "pydantic>=2.0",
    # --- Logging ---
    "loguru>=0.7.0",
    # --- Retry / Resilience ---
    "tenacity>=9.0.0",
    # --- Async ---
    "anyio>=4.0",
    # --- Enhanced Unicode regex ---
    "regex>=2024.0.0",
    # --- Database ---
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# Install with: ``uv sync --extra notebook``
# Adds Jupyter + pandas/matplotlib/seaborn/numpy for ../eda.ipynb and
# any future analysis notebooks.  Kept out of the default install so
# the production processing image stays slim.
notebook = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# pyproject.toml lives *inside* the processing_engine/ package directory,
# so we point setuptools one level up to discover the package correctly.
[tool.setuptools.packages.find]
where = [".."]
include = ["processing_engine*"]
